; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et131x_initpci.c_et131x_config_parse.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et131x_initpci.c_et131x_config_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.et131x_adapter = type { i32, i32, i32, i32, %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i64, i32 }

@et131x_config_parse.default_mac = internal constant [6 x i32] [i32 0, i32 5, i32 61, i32 0, i32 2, i32 0], align 16
@et131x_config_parse.duplex = internal constant [6 x i32] [i32 0, i32 1, i32 2, i32 1, i32 2, i32 2], align 16
@et131x_config_parse.speed = internal constant [6 x i32] [i32 0, i32 10, i32 10, i32 100, i32 100, i32 1000], align 16
@et131x_speed_set = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Speed set manually to : %d \0A\00", align 1
@et131x_nmi_disable = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@ET131X_PCI_DEVICE_ID_FAST = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @et131x_config_parse(%struct.et131x_adapter* %0) #0 {
  %2 = alloca %struct.et131x_adapter*, align 8
  store %struct.et131x_adapter* %0, %struct.et131x_adapter** %2, align 8
  %3 = load i32, i32* @et131x_speed_set, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %6, i32 0, i32 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32, i32* @et131x_speed_set, align 4
  %11 = call i32 @dev_info(i32* %9, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %10)
  br label %12

12:                                               ; preds = %5, %1
  %13 = load i32, i32* @et131x_speed_set, align 4
  %14 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %15 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %17 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %16, i32 0, i32 1
  store i32 1514, i32* %17, align 4
  %18 = load i32, i32* @et131x_nmi_disable, align 4
  %19 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %20 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %19, i32 0, i32 6
  store i32 %18, i32* %20, align 4
  %21 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %22 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %21, i32 0, i32 5
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @ETH_ALEN, align 4
  %25 = call i32 @memcpy(i32 %23, i32* getelementptr inbounds ([6 x i32], [6 x i32]* @et131x_config_parse.default_mac, i64 0, i64 0), i32 %24)
  %26 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %27 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %26, i32 0, i32 4
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @ET131X_PCI_DEVICE_ID_FAST, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %41

33:                                               ; preds = %12
  %34 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %35 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = icmp eq i32 %36, 5
  br i1 %37, label %38, label %41

38:                                               ; preds = %33
  %39 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %40 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %39, i32 0, i32 0
  store i32 4, i32* %40, align 8
  br label %41

41:                                               ; preds = %38, %33, %12
  %42 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %43 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds [6 x i32], [6 x i32]* @et131x_config_parse.speed, i64 0, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %49 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %48, i32 0, i32 2
  store i32 %47, i32* %49, align 8
  %50 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %51 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds [6 x i32], [6 x i32]* @et131x_config_parse.duplex, i64 0, i64 %53
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.et131x_adapter*, %struct.et131x_adapter** %2, align 8
  %57 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %56, i32 0, i32 3
  store i32 %55, i32* %57, align 4
  ret void
}

declare dso_local i32 @dev_info(i32*, i8*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
